# Lite

./: .gitignore  CK.workspace  CMakeLists.txt  L.workspace  LICENSE.md  README.txt  TODO.txt  smiley-44x44x24.rgb
Lfirefly/: Lfirefly.cbp  Lfirefly.cpp
Lsparkle/: Lsparkle.cbp  Lsparkle.cpp
Lstarry/: Lstarry.cbp  Lstarry.cpp
Ltool/: Ltool.cbp  Ltool.cpp
Notes/: GetCount-QuickPlayProCapture.pcapng  Kinect.txt  LEDstrips.txt  Lightberry.txt  LightberryWifi.txt  RandomDistributions.xlsx  RenderingPipeline.txt
ckfirefly/: ckfirefly.cbp  ckfirefly.cpp  ckfirefly.h
ckinfo/: ckinfo.cbp  ckinfo.cpp
cklib/: Color.cpp  Color.h  ColorShort.cpp  CursesBuffer.cpp  CursesBuffer.h  KiNET.h  LBuffer.cpp  LBuffer.h  LFilter.cpp  LFilter.h  LFramework.cpp  LFramework.h  Lobj.cpp  Lobj.h  MetaBuffer.cpp  MetaBuffer.h  Strip.cpp  Strip.h  StripBuffer.cpp  StripBuffer.h  ckarglist.cpp  ckcli.cpp  ckcli.h  cklib.cbp  cklib.cpp  cklib.depend  cklib.h  cklib.layout  stdOptions.h  utils.cpp  utils.h  utilsGPIO.cpp  utilsGPIO.h  utilsIP.cpp  utilsIP.h  utilsOptions.cpp  utilsOptions.h  utilsPrecomp.h  utilsRandom.cpp  utilsRandom.h  (+4 more)
cksparkle/: cksparkle.cbp  cksparkle.cpp
ckstarry/: ckstarry.cbp  ckstarry.cpp
cktool/: cktool.cbp  cktool.cpp  cktool.depend  cktool.layout  main.cpp
cmake_modules/: FindOpenNI2.cmake  FindSFML.cmake
doc/: DeviceFormat.txt
img/: PatsLogo-x44.rgb  rainbowstar-44x44x24.rgb
lib/: CKbuffer.cpp  CKbuffer.h  CKdevice.cpp  Color.cpp  ColorShort.h  ComboBuffer.cpp  ComboBuffer.h  Config.h  CursesBuffer.cpp  CursesBuffer.h  FilterBuffers.cpp  FilterBuffers.h  LBuffer.cpp  LBuffer.h  LFramework.cpp  LFramework.h  LSparkle.cpp  LSparkle.h  Lobj.cpp  Lobj.h  Lproc.cpp  Lproc.h  MetaBuffer.cpp  MetaBuffer.h  Strip.cpp  StripBuffer.cpp  StripBuffer.h  WinBuffer.cpp  WinBuffer.h  lib.cbp  utils.cpp  utils.h  utilsFile.cpp  utilsGPIO.cpp  utilsGPIO.h  utilsIP.h  utilsOptions.h  utilsRandom.cpp  utilsRandom.h  utilsTime.cpp  (+1 more)
libsrc/: CKbuffer.cpp  CKbuffer.h  CKdevice.cpp  CKdevice.h  CMakeLists.txt  Color.cpp  Color.h  ComboBuffer.cpp  ComboBuffer.h  Config.h  CursesBuffer.cpp  EffectFilters.cpp  EffectFilters.h  FilterBuffers.cpp  FilterBuffers.h  KiNET.h  LBuffer.cpp  LBuffer.h  LFilter.cpp  LFilter.h  LFramework.cpp  LFramework.h  LSparkle.cpp  Lobj.cpp  Lobj.h  Lproc.h  MapFilters.cpp  MapFilters.h  StripBuffer.cpp  StripBuffer.h  WinBuffer.cpp  WinBuffer.h  utils.cpp  utils.h  utilsFile.h  utilsGPIO.cpp  utilsGPIO.h  utilsIP.cpp  utilsIP.h  utilsOptions.cpp  (+10 more)
linux_init/: README.txt  ckrun  liteberryrun  literun
linux_init/liteberryrc/: .bash_profile
src/: CMakeLists.txt  Lfirefly.cpp  Lflash.cpp  Lpov.cpp  Lsparkle.cpp  Lstarry.cpp  Ltool.cpp  testmix.cpp  testtime.cpp
testmix/: testmix.cbp  testmix.cpp
