add_library(lite STATIC
StripBuffer.cpp
CKbuffer.cpp
CKdevice.cpp
Color.cpp
ComboBuffer.cpp
CursesBuffer.cpp
FilterBuffers.cpp
LBuffer.cpp
LFramework.cpp
Lobj.cpp
Lproc.cpp
LSparkle.cpp
utils.cpp
utilsFile.cpp
utilsGPIO.cpp
utilsIP.cpp
utilsOptions.cpp
utilsRandom.cpp
utilsSocket.cpp
utilsTime.cpp
WinBuffer.cpp)
